--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -68,15 +68,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Understanding PyTorch\n",
+    "## Comparing Several Libraries\n",
     "\n",
+    "A quick look at performing the same task in:\n",
+    "\n",
+    "* scikit-learn\n",
+    "* Keras (with TensorFlow)\n",
+    "* PyTorch.\n",
+    "\n",
+    "<div><a href=\"Library_Comparison.ipynb\"><img src=\"img/open-notebook.png\" align=\"left\"/></a></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Understanding PyTorch\n",
     "\n",
     "* Tensors and NumPy interfaces\n",
     "* Autograd\n",
     "* Using GPUs with `torch.cuda`\n",
     "* Parallelizing on clusters with `torch.distributed`\n",
     "* Create a neural network with `torch.nn`\n",
-    "* Differences from TensorFlow, Keras, etc.\n",
     "\n",
     "<div><a href=\"IntroPyTorch.ipynb\"><img src=\"img/open-notebook.png\" align=\"left\"/></a></div>"
    ]
