--- a/NetworkExamples.ipynb
+++ b/NetworkExamples.ipynb
@@ -166,12 +166,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "learning_rate = 1e-4\n",
-    "\n",
     "# The number of input features\n",
     "in_dim = X.shape[1]\n",
     "\n",
@@ -179,66 +177,33 @@
     "hidden1 = int(in_dim * 2 + (in_dim * (in_dim-1) / 2) + 1)\n",
     "out_dim = Y.shape[1]\n",
     "\n",
-    "# The sizes of the \"inference layers\"\n",
-    "hidden2 = 2 * out_dim   \n",
-    "hidden3 = out_dim"
+    "# The sizes of the \"inference layers\"/\n",
+    "hidden2 = hidden3 = 2 * out_dim   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(6, 33, 28, 66, 33)"
+       "(6, 28, 66, 66, 33)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "in_dim, out_dim, hidden1, hidden2, hidden3"
+    "in_dim, hidden1, hidden2, hidden3, out_dim"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a sequential NN\n",
-    "model = torch.nn.Sequential(\n",
-    "    # This layer allows \"polynomial features\"\n",
-    "    torch.nn.Linear(in_dim, hidden1),\n",
-    "    # The activation is treated as a separate layer\n",
-    "    torch.nn.ReLU(),\n",
-    "\n",
-    "    # This layer is \"inference\"\n",
-    "    torch.nn.Linear(hidden1, hidden2),\n",
-    "    # Often Leaky ReLU eliminates the \"dead neuron\" danger\n",
-    "    torch.nn.LeakyReLU(), \n",
-    "    \n",
-    "    # A Dropout layer sometimes reduces co-adaptation of neurons\n",
-    "    torch.nn.Dropout(p=0.25),\n",
-    "\n",
-    "    # This layer is \"inference\"\n",
-    "    torch.nn.Linear(hidden2, hidden3),\n",
-    "    torch.nn.LeakyReLU(), \n",
-    "\n",
-    "    # A sigmoid activation is used for a binary decision\n",
-    "    # Since we use one-hot encoding, we essentially make a \n",
-    "    torch.nn.Linear(hidden3, out_dim),  \n",
-    "    torch.nn.Sigmoid()\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,78 +240,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 tensor(18260904., grad_fn=<MseLossBackward>)\n",
-      "100 tensor(6267635., grad_fn=<MseLossBackward>)\n",
-      "200 tensor(1705114.3750, grad_fn=<MseLossBackward>)\n",
-      "300 tensor(1091557., grad_fn=<MseLossBackward>)\n",
-      "400 tensor(1014259.4375, grad_fn=<MseLossBackward>)\n",
-      "500 tensor(1003724.3125, grad_fn=<MseLossBackward>)\n",
-      "600 tensor(987928.3750, grad_fn=<MseLossBackward>)\n",
-      "700 tensor(985802.6875, grad_fn=<MseLossBackward>)\n",
-      "800 tensor(982526.5000, grad_fn=<MseLossBackward>)\n",
-      "900 tensor(980437.9375, grad_fn=<MseLossBackward>)\n",
-      "1000 tensor(976926.2500, grad_fn=<MseLossBackward>)\n",
-      "1100 tensor(972897.8125, grad_fn=<MseLossBackward>)\n",
-      "1200 tensor(969080.6250, grad_fn=<MseLossBackward>)\n",
-      "1300 tensor(975465.1250, grad_fn=<MseLossBackward>)\n",
-      "1400 tensor(969783.0625, grad_fn=<MseLossBackward>)\n",
-      "1500 tensor(969482., grad_fn=<MseLossBackward>)\n",
-      "1600 tensor(968283.1250, grad_fn=<MseLossBackward>)\n",
-      "1700 tensor(963359.5625, grad_fn=<MseLossBackward>)\n",
-      "1800 tensor(965612.5000, grad_fn=<MseLossBackward>)\n",
-      "1900 tensor(955097.3125, grad_fn=<MseLossBackward>)\n",
-      "2000 tensor(956353.6875, grad_fn=<MseLossBackward>)\n",
-      "2100 tensor(953451.5000, grad_fn=<MseLossBackward>)\n",
-      "2200 tensor(952226.1875, grad_fn=<MseLossBackward>)\n",
-      "2300 tensor(949612.2500, grad_fn=<MseLossBackward>)\n",
-      "2400 tensor(949187.9375, grad_fn=<MseLossBackward>)\n",
-      "2500 tensor(951468.2500, grad_fn=<MseLossBackward>)\n",
-      "2600 tensor(947861.6250, grad_fn=<MseLossBackward>)\n",
-      "2700 tensor(942446.7500, grad_fn=<MseLossBackward>)\n",
-      "2800 tensor(937869.6250, grad_fn=<MseLossBackward>)\n",
-      "2900 tensor(936636.5625, grad_fn=<MseLossBackward>)\n",
-      "3000 tensor(937037.2500, grad_fn=<MseLossBackward>)\n",
-      "3100 tensor(931396.4375, grad_fn=<MseLossBackward>)\n",
-      "3200 tensor(935328.7500, grad_fn=<MseLossBackward>)\n",
-      "3300 tensor(933691.4375, grad_fn=<MseLossBackward>)\n",
-      "3400 tensor(940957.9375, grad_fn=<MseLossBackward>)\n",
-      "3500 tensor(933530.6875, grad_fn=<MseLossBackward>)\n",
-      "3600 tensor(936016.8750, grad_fn=<MseLossBackward>)\n",
-      "3700 tensor(931722.8125, grad_fn=<MseLossBackward>)\n",
-      "3800 tensor(932914.5000, grad_fn=<MseLossBackward>)\n",
-      "3900 tensor(930666.8125, grad_fn=<MseLossBackward>)\n",
-      "4000 tensor(929975.1250, grad_fn=<MseLossBackward>)\n",
-      "4100 tensor(925576.3750, grad_fn=<MseLossBackward>)\n",
-      "4200 tensor(926834.3125, grad_fn=<MseLossBackward>)\n",
-      "4300 tensor(928365.6250, grad_fn=<MseLossBackward>)\n",
-      "4400 tensor(924983.0625, grad_fn=<MseLossBackward>)\n",
-      "4500 tensor(923345.9375, grad_fn=<MseLossBackward>)\n",
-      "4600 tensor(927039.9375, grad_fn=<MseLossBackward>)\n",
-      "4700 tensor(928198.5000, grad_fn=<MseLossBackward>)\n",
-      "4800 tensor(921425.5000, grad_fn=<MseLossBackward>)\n",
-      "4900 tensor(926847.6875, grad_fn=<MseLossBackward>)\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "# Create a sequential NN\n",
+    "model = torch.nn.Sequential(\n",
+    "    # This layer allows \"polynomial features\"\n",
+    "    torch.nn.Linear(in_dim, hidden1),\n",
+    "    # The activation is treated as a separate layer\n",
+    "    torch.nn.ReLU(),\n",
+    "\n",
+    "    # This layer is \"inference\"\n",
+    "    torch.nn.Linear(hidden1, hidden2),\n",
+    "    # Often Leaky ReLU eliminates the \"dead neuron\" danger\n",
+    "    torch.nn.LeakyReLU(), \n",
+    "    \n",
+    "    # A Dropout layer sometimes reduces co-adaptation of neurons\n",
+    "    torch.nn.Dropout(p=0.1),\n",
+    "\n",
+    "    # This layer is \"inference\"\n",
+    "    torch.nn.Linear(hidden2, hidden3),\n",
+    "    torch.nn.LeakyReLU(), \n",
+    "\n",
+    "    # A sigmoid activation is used for a binary decision\n",
+    "    # Since we use one-hot encoding, we essentially make a \n",
+    "    torch.nn.Linear(hidden3, out_dim),  \n",
+    "    torch.nn.Sigmoid()\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Split the original data\n",
     "X_train, X_test, Y_train, Y_test = train_test_split(X, Y)\n",
     "\n",
     "# Convert arrays to tensors\n",
     "X_train = torch.from_numpy(X_train.values).float()\n",
-    "Y_train = torch.from_numpy(Y_train.values[:, np.newaxis]).float()\n",
-    "X_test = torch.from_numpy(X_test.values).float()\n",
-    "Y_test = torch.from_numpy(Y_test.values[:, np.newaxis]).float()\n",
-    "\n",
+    "X_test  = torch.from_numpy(X_test.values).float()\n",
+    "Y_train = torch.from_numpy(Y_train.values)[:, np.newaxis].float()\n",
+    "Y_test  = torch.from_numpy(Y_test.values)[:, np.newaxis].float()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 tensor(0.3172, grad_fn=<MseLossBackward>)\n",
+      "250 tensor(0.1912, grad_fn=<MseLossBackward>)\n",
+      "500 tensor(0.1092, grad_fn=<MseLossBackward>)\n",
+      "750 tensor(0.0561, grad_fn=<MseLossBackward>)\n",
+      "1000 tensor(0.0397, grad_fn=<MseLossBackward>)\n",
+      "1250 tensor(0.0340, grad_fn=<MseLossBackward>)\n",
+      "1500 tensor(0.0320, grad_fn=<MseLossBackward>)\n",
+      "1750 tensor(0.0306, grad_fn=<MseLossBackward>)\n",
+      "2000 tensor(0.0303, grad_fn=<MseLossBackward>)\n",
+      "2250 tensor(0.0300, grad_fn=<MseLossBackward>)\n",
+      "2500 tensor(0.0298, grad_fn=<MseLossBackward>)\n",
+      "2750 tensor(0.0296, grad_fn=<MseLossBackward>)\n",
+      "3000 tensor(0.0294, grad_fn=<MseLossBackward>)\n",
+      "3250 tensor(0.0292, grad_fn=<MseLossBackward>)\n",
+      "3500 tensor(0.0292, grad_fn=<MseLossBackward>)\n",
+      "3750 tensor(0.0293, grad_fn=<MseLossBackward>)\n",
+      "4000 tensor(0.0293, grad_fn=<MseLossBackward>)\n",
+      "4250 tensor(0.0291, grad_fn=<MseLossBackward>)\n",
+      "4500 tensor(0.0291, grad_fn=<MseLossBackward>)\n",
+      "4750 tensor(0.0289, grad_fn=<MseLossBackward>)\n"
+     ]
+    }
+   ],
+   "source": [
     "## Now run model\n",
-    "loss_fn = torch.nn.MSELoss(reduction='elementwise_mean')\n",
+    "learning_rate = 1e-5\n",
+    "loss_fn = torch.nn.MSELoss(reduction='mean')\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)\n",
     "do_training(model, X_train, Y_train, optimizer)"
    ]
@@ -392,143 +367,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 119,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[27, 21, 30],\n",
+       "       [27, 30, 24],\n",
+       "       [30,  6, 27],\n",
+       "       ...,\n",
+       "       [21, 24, 30],\n",
+       "       [24, 21, 30],\n",
+       "       [24, 30, 26]])"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "y_pred = np.argmax(model(X_train).detach().numpy(), axis=1)"
+    "y_pred = model(X_test).detach().numpy().argsort(axis=1)[:,:-4:-1]\n",
+    "y_pred"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = np.argmax(Y_train.detach().numpy(), axis=2).flatten()"
+    "y = np.argmax(Y_test.detach().numpy(), axis=2).flatten()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6 LONG / 6\n",
-      "4 / 6\n",
-      "6 SHORT / 4\n",
-      "2 / 6\n",
-      "10 / 6\n",
-      "14 / 6\n",
-      "14 / 6\n",
-      "10 / 4\n",
-      "0 / 4\n",
-      "2 / 4\n",
-      "2 / 6\n",
-      "8 / 4\n",
-      "0 / 6\n",
-      "12 / 6\n",
-      "8 SHORT / 6\n",
-      "8 SHORT / 6\n",
-      "12 / 4\n",
-      "4 / 6\n",
-      "6 / 6\n",
-      "4 / 4\n",
-      "8 / 4\n",
-      "6 / 4\n",
-      "4 / 6\n",
-      "12 / 6\n",
-      "4 / 6\n",
-      "6 / 6\n",
-      "2 LONG / 4\n",
-      "10 / 6\n",
-      "8 LONG / 6\n",
-      "14 / 4\n",
-      "00 SHORT / 4\n",
-      "4 / 6\n",
-      "8 / 6\n",
-      "10 / 6\n",
-      "00 / 6\n",
-      "6 / 6\n",
-      "2 / 6\n",
-      "6 / 4\n",
-      "6 / 6\n",
-      "2 / 6\n",
-      "4 / 6\n",
-      "4 SHORT / 4\n",
-      "12 / 6\n",
-      "8 SHORT / 4\n",
-      "4 / 6\n",
-      "0 SHORT / 4\n",
-      "0 / 6\n",
-      "6 / 6\n",
-      "4 / 6\n",
-      "16 LONG / 4\n",
-      "14 SHORT / 4\n",
-      "4 / 6\n",
-      "6 / 8\n",
-      "6 LONG / 4\n",
-      "8 / 4\n",
-      "4 / 6\n",
-      "2 / 4\n",
-      "4 / 6\n",
-      "12 LONG / 6\n",
-      "0 / 8\n",
-      "8 / 6\n",
-      "4 SHORT / 6\n",
-      "00 SHORT / 6\n",
-      "4 / 6\n",
-      "10 / 4\n",
-      "6 / 4\n",
-      "4 / 6\n",
-      "8 / 2\n",
-      "12 / 4\n",
-      "6 / 6\n",
-      "0 / 6\n",
-      "8 / 6\n",
-      "16 LONG / 4\n",
-      "2 / 6\n",
-      "14 SHORT / 4\n",
-      "2 / 6\n",
-      "6 / 6\n",
-      "4 / 6\n",
-      "2 / 4\n",
-      "2 SHORT / 6\n",
-      "8 / 6\n",
-      "6 / 4\n",
-      "2 / 4\n",
-      "4 / 4\n",
-      "4 / 4\n",
-      "2 SHORT / 6\n",
-      "14 / 6\n",
-      "12 / 6\n",
-      "12 / 4\n",
-      "4 / 6\n",
-      "2 / 6\n",
-      "12 / 6\n",
-      "6 / 6\n",
-      "0 SHORT / 6\n",
-      "8 / 6\n",
-      "4 / 6\n",
-      "8 / 6\n",
-      "8 / 4\n",
-      "6 / 6\n",
-      "2 / 4\n",
-      "00 / 4\n",
-      "2 / 6\n"
+      "00 -> 6, 2, 8\n",
+      "4 -> 6, 8, 4\n",
+      "6 -> 8, 10, 6\n",
+      "6 SHORT -> 8, 4, 2\n",
+      "12 -> 2, 10, 8\n",
+      "6 -> 4, 6, 8\n",
+      "6 -> 2, 4, 8\n",
+      "6 -> 4, 8, 6\n",
+      "0 -> 4, 6, 2\n",
+      "4 -> 4, 8, 6\n",
+      "12 LONG -> 6, 10, 8\n",
+      "8 -> 10, 4, 8\n",
+      "0 -> 6, 4, 2\n",
+      "8 -> 6, 4, 2\n",
+      "6 -> 6, 8, 4\n",
+      "2 -> 4, 6, 2\n",
+      "6 -> 8, 10, 6\n",
+      "4 -> 4, 6, 2\n",
+      "6 -> 2, 4, 8\n",
+      "4 -> 6, 4, 2\n",
+      "4 SHORT -> 4, 8, 2\n",
+      "4 -> 4, 6, 2\n",
+      "0 SHORT -> 4, 6, 2\n",
+      "6 -> 6, 8, 4\n",
+      "4 -> 2, 8, 6\n",
+      "10 -> 2, 4, 8\n",
+      "10 -> 8, 2, 4\n",
+      "2 -> 6, 2, 8\n",
+      "6 -> 2, 4, 8\n",
+      "12 -> 6, 4, 8\n",
+      "6 -> 4, 6, 2\n",
+      "2 LONG -> 2, 8, 4\n",
+      "6 -> 2, 4, 8\n",
+      "0 SHORT -> 4, 2, 6\n",
+      "4 -> 6, 8, 4\n",
+      "0 -> 8, 4, 2\n",
+      "8 -> 2, 8, 4\n",
+      "8 -> 4, 2, 8\n",
+      "0 SHORT -> 4, 8, 6\n",
+      "6 -> 2, 4, 8\n",
+      "8 -> 6, 4, 2\n",
+      "18 -> 8, 6, 10\n",
+      "6 SHORT -> 4, 8, 2\n",
+      "4 -> 4, 6, 8\n",
+      "0 -> 8, 4, 10\n",
+      "4 -> 6, 4, 2\n",
+      "4 -> 2, 4, 10\n",
+      "10 -> 8, 4, 2\n",
+      "6 -> 2, 8, 4\n",
+      "4 SHORT -> 6, 8, 4\n",
+      "8 -> 2, 4, 8\n",
+      "4 -> 2, 4, 8\n",
+      "4 SHORT -> 6, 4, 8\n",
+      "8 SHORT -> 4, 8, 10\n",
+      "4 -> 4, 8, 2 SHORT\n",
+      "10 -> 8, 2, 6\n",
+      "8 -> 8, 2, 10\n",
+      "2 -> 4, 6, 8\n",
+      "12 -> 2, 10, 8\n",
+      "6 -> 6, 2, 8\n",
+      "12 -> 10, 2, 8\n",
+      "4 -> 4, 8, 6\n",
+      "2 -> 8, 6, 12\n",
+      "00 SHORT -> 8, 4, 2\n",
+      "8 SHORT -> 2, 4, 8\n",
+      "6 -> 4, 8, 2\n",
+      "2 SHORT -> 0, 4, 6\n",
+      "2 -> 4, 2, 8\n",
+      "10 -> 4, 8, 6 SHORT\n",
+      "10 -> 4, 8, 6\n",
+      "12 -> 8, 2, 4\n",
+      "8 -> 4, 2, 6\n",
+      "4 SHORT -> 8, 4, 0\n",
+      "10 -> 4, 8, 6\n",
+      "10 LONG -> 6, 4, 2\n",
+      "6 SHORT -> 4, 6, 2\n",
+      "6 -> 4, 12, 8\n",
+      "6 -> 8, 4, 2\n",
+      "2 -> 6, 4, 2\n",
+      "6 -> 8, 4, 2\n",
+      "6 LONG -> 6, 4, 2\n",
+      "8 -> 6, 4, 2\n",
+      "0 -> 6, 8, 10\n",
+      "00 SHORT -> 4, 2, 8\n",
+      "4 -> 2, 4, 8\n",
+      "2 -> 8, 4, 14\n",
+      "8 -> 4, 8, 6\n",
+      "6 -> 4, 2, 6\n",
+      "2 -> 2, 4, 8\n",
+      "6 -> 8, 6, 2\n",
+      "6 -> 4, 2, 8\n",
+      "0 -> 6, 4, 8\n",
+      "2 -> 6, 4, 2\n",
+      "18 SHORT -> 4, 6, 2\n",
+      "2 -> 4, 2, 8\n",
+      "2 -> 4, 6, 12\n",
+      "0 -> 4, 8, 6\n",
+      "0 -> 6, 4, 8\n",
+      "8 -> 4, 6, 2\n",
+      "6 LONG -> 2, 4, 6\n",
+      "4 -> 2, 4, 8\n",
+      "0 -> 4, 2, 8\n"
      ]
     }
    ],
    "source": [
     "n = 0\n",
-    "for true, claim in zip(y, y_pred):\n",
-    "    print(labels[true], \"/\", labels[claim])\n",
+    "for true, claims in zip(y, y_pred):\n",
+    "    predictions = \", \".join(labels[n] for n in claims[:3])\n",
+    "    print(labels[true], \"->\", predictions)\n",
     "    if n > 100:\n",
     "        break\n",
-    "    n += 1\n"
+    "    n += 1"
    ]
   },
   {
