Bit of debugging on remove GPU

--- a/IntroPyTorch.ipynb
+++ b/IntroPyTorch.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -50,14 +50,14 @@
      "output_type": "stream",
      "text": [
       "Random 2-D tensor\n",
-      "tensor([[ 0.5615, -1.1130, -1.0479],\n",
-      "        [-0.6518, -0.3695, -1.1789],\n",
-      "        [ 0.4406,  0.3704, -0.1163]], requires_grad=True)\n",
+      "tensor([[-0.4707, -0.4236, -0.5479],\n",
+      "        [-3.6637,  0.5018, -0.1823],\n",
+      "        [ 0.6070,  0.0979, -0.5561]], requires_grad=True)\n",
       "\n",
       "Random 2-D shifted by 7, multiplied by 5\n",
-      "tensor([[37.8076, 29.4348, 29.7605],\n",
-      "        [31.7411, 33.1524, 29.1055],\n",
-      "        [37.2028, 36.8518, 34.4184]], grad_fn=<MulBackward0>)\n"
+      "tensor([[32.6463, 32.8821, 32.2606],\n",
+      "        [16.6814, 37.5089, 34.0883],\n",
+      "        [38.0351, 35.4895, 32.2197]], grad_fn=<MulBackward0>)\n"
      ]
     }
    ],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
        "         [35., 40., 45.]]), None)"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -111,12 +111,12 @@
      "output_type": "stream",
      "text": [
       "Multiplied by 3\n",
-      "tensor([[113.4228,  88.3044,  89.2815],\n",
-      "        [ 95.2233,  99.4572,  87.3164],\n",
-      "        [111.6083, 110.5554, 103.2551]], grad_fn=<MulBackward0>)\n",
+      "tensor([[ 97.9388,  98.6462,  96.7817],\n",
+      "        [ 50.0443, 112.5267, 102.2650],\n",
+      "        [114.1052, 106.4686,  96.6592]], grad_fn=<MulBackward0>)\n",
       "\n",
       "Mean of values\n",
-      "tensor(99.8249, grad_fn=<MeanBackward1>)\n"
+      "tensor(97.2706, grad_fn=<MeanBackward1>)\n"
      ]
     }
    ],
@@ -133,18 +133,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  --> <MeanBackward1 object at 0x11df8d0b8>\n",
-      "   --> <MulBackward0 object at 0x11d4d9a20>\n",
-      "    --> <MulBackward0 object at 0x11df82cf8>\n",
-      "     --> <AddBackward0 object at 0x11df8d240>\n",
-      "      --> <AccumulateGrad object at 0x11df8d358>\n"
+      "  --> <MeanBackward1 object at 0x7f27b6399ba8>\n",
+      "   --> <MulBackward0 object at 0x7f27b6399c18>\n",
+      "    --> <MulBackward0 object at 0x7f27b6399c50>\n",
+      "     --> <AddBackward0 object at 0x7f27b6399c88>\n",
+      "      --> <AccumulateGrad object at 0x7f27b6399cc0>\n"
      ]
     }
    ],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,24 +199,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration:    0 - Loss: 2.88e+07\n",
-      "Iteration:   50 - Loss: 1.13e+04\n",
-      "Iteration:  100 - Loss: 3.75e+02\n",
-      "Iteration:  150 - Loss: 2.14e+01\n",
-      "Iteration:  200 - Loss: 1.50e+00\n",
-      "Iteration:  250 - Loss: 1.17e-01\n",
-      "Iteration:  300 - Loss: 9.85e-03\n",
-      "Iteration:  350 - Loss: 1.09e-03\n",
-      "Iteration:  400 - Loss: 2.32e-04\n",
-      "Iteration:  450 - Loss: 8.28e-05\n",
-      "Iteration:  500 - Loss: 4.10e-05\n"
+      "Iteration:    0 - Loss: 3.08e+07\n",
+      "Iteration:   50 - Loss: 1.36e+04\n",
+      "Iteration:  100 - Loss: 7.66e+02\n",
+      "Iteration:  150 - Loss: 7.86e+01\n",
+      "Iteration:  200 - Loss: 1.01e+01\n",
+      "Iteration:  250 - Loss: 1.45e+00\n",
+      "Iteration:  300 - Loss: 2.16e-01\n",
+      "Iteration:  350 - Loss: 3.31e-02\n",
+      "Iteration:  400 - Loss: 5.44e-03\n",
+      "Iteration:  450 - Loss: 1.12e-03\n",
+      "Iteration:  500 - Loss: 3.34e-04\n"
      ]
     }
    ],
@@ -263,24 +263,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration:    0 - Loss: 2.773e+07\n",
-      "Iteration:   50 - Loss: 1.262e+04\n",
-      "Iteration:  100 - Loss: 4.232e+02\n",
-      "Iteration:  150 - Loss: 2.685e+01\n",
-      "Iteration:  200 - Loss: 2.296e+00\n",
-      "Iteration:  250 - Loss: 2.261e-01\n",
-      "Iteration:  300 - Loss: 2.401e-02\n",
-      "Iteration:  350 - Loss: 2.917e-03\n",
-      "Iteration:  400 - Loss: 5.342e-04\n",
-      "Iteration:  450 - Loss: 1.602e-04\n",
-      "Iteration:  500 - Loss: 6.959e-05\n"
+      "Iteration:    0 - Loss: 3.294e+07\n",
+      "Iteration:   50 - Loss: 1.371e+04\n",
+      "Iteration:  100 - Loss: 5.185e+02\n",
+      "Iteration:  150 - Loss: 3.469e+01\n",
+      "Iteration:  200 - Loss: 2.842e+00\n",
+      "Iteration:  250 - Loss: 2.521e-01\n",
+      "Iteration:  300 - Loss: 2.323e-02\n",
+      "Iteration:  350 - Loss: 2.421e-03\n",
+      "Iteration:  400 - Loss: 4.108e-04\n",
+      "Iteration:  450 - Loss: 1.259e-04\n",
+      "Iteration:  500 - Loss: 5.713e-05\n"
      ]
     }
    ],
@@ -336,28 +336,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration:    0 - Loss: 6.882e+02\n",
-      "Iteration:   50 - Loss: 3.714e+01\n",
-      "Iteration:  100 - Loss: 2.948e+00\n",
-      "Iteration:  150 - Loss: 4.249e-01\n",
-      "Iteration:  200 - Loss: 8.347e-02\n",
-      "Iteration:  250 - Loss: 1.896e-02\n",
-      "Iteration:  300 - Loss: 4.493e-03\n",
-      "Iteration:  350 - Loss: 1.189e-03\n",
-      "Iteration:  400 - Loss: 3.414e-04\n",
-      "Iteration:  450 - Loss: 1.039e-04\n",
-      "Iteration:  500 - Loss: 3.289e-05\n"
+      "Iteration:    0 - Loss: 6.462e+02\n",
+      "Iteration:   50 - Loss: 2.993e+01\n",
+      "Iteration:  100 - Loss: 1.697e+00\n",
+      "Iteration:  150 - Loss: 2.030e-01\n",
+      "Iteration:  200 - Loss: 3.377e-02\n",
+      "Iteration:  250 - Loss: 6.378e-03\n",
+      "Iteration:  300 - Loss: 1.285e-03\n",
+      "Iteration:  350 - Loss: 2.669e-04\n",
+      "Iteration:  400 - Loss: 5.642e-05\n",
+      "Iteration:  450 - Loss: 1.207e-05\n",
+      "Iteration:  500 - Loss: 2.605e-06\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
+    "\n",
     "# These layers are equivalent to the weight tensors `w1` and `w2`\n",
     "# Note: nn.Sequential is a Module which contains other Modules, and \n",
     "# applies them in sequence to produce its output. Each Linear Module \n",
@@ -407,12 +409,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One thing to note.  You can get some basic information about a model simply by printing it or echoing it.  But I—and apparently a lot of users—like a summary more similar to that Keras provides for other backends.  The external package `torchsummary` provides this, if you'd like it."
+    "One thing to note.  You can get some basic information about a model simply by printing it or echoing it.  But I—and many other users—like a summary more similar to that Keras provides for other backends.  The external package `torchsummary` provides this, if you'd like it."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +427,7 @@
        ")"
       ]
      },
-     "execution_count": 377,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +466,13 @@
    ],
    "source": [
     "from torchsummary import summary\n",
-    "summary(model, input_size=(1, D_in))"
+    "\n",
+    "# torchsummary has a glitch. If a running on a CUDA-enabled build\n",
+    "# it only wants to print a CUDA model\n",
+    "summary(model, input_size=(1, D_in))\n",
+    "\n",
+    "# Use this if first doesn't work\n",
+    "# summary(model.to(torch.device('cuda:0')), input_size=(1, D_in))"
    ]
   },
   {
@@ -487,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -537,34 +545,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss after training: 1.0174300768994726e-05\n"
+      "Loss after training: 7.895790986367501e-06\n",
+      "CPU times: user 372 ms, sys: 103 ms, total: 476 ms\n",
+      "Wall time: 513 ms\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
     "# For demonstration, we can use CPU target if CUDA not available\n",
     "device = torch.device('cpu')\n",
     "# Uncomment this to run on GPU\n",
-    "# device = torch.device('cuda') \n",
+    "device = torch.device('cuda:0') \n",
     "\n",
     "x = torch.randn(N, D_in, device=device)\n",
     "y = torch.randn(N, D_out, device=device)\n",
     "\n",
-    "# Could use any of the versions shown after this, but for example:\n",
+    "# Could use any of the versions shown, but for example:\n",
     "loss_fn = torch.nn.MSELoss(reduction='sum')\n",
     "learning_rate = 1e-4\n",
     "model = torch.nn.Sequential(\n",
     "          torch.nn.Linear(D_in, H),\n",
     "          torch.nn.ReLU(),\n",
     "          torch.nn.Linear(H, D_out),\n",
-    "        )\n",
+    "        ).to(device)\n",
     "\n",
     "for t in range(501):\n",
     "    y_pred = model(x)\n",
