--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -106,7 +106,7 @@
     "* Generative Adversarial Networks (GAN)\n",
     "* Reinforcement Learning\n",
     "\n",
-    "<div><a href=\"NetworkExamples.ipynb\"><img src=\"img/open-notebook.png\" align=\"left\"/></a></div>"
+    "<div><a href=\"NetworkExamples_0.ipynb\"><img src=\"img/open-notebook.png\" align=\"left\"/></a></div>"
    ]
   },
   {
