--- a/IntroPyTorch.ipynb
+++ b/IntroPyTorch.ipynb
@@ -607,7 +607,7 @@
     "\n",
     "**Tasks with Networks**: We just looked at building a few simple networks, in several styles, using PyTorch.  The new lesson delves into more complex and real world examples.\n",
     "\n",
-    "<a href=\"NetworkExamples.ipynb\"><img src=\"img/open-notebook.png\" align=\"left\"/></a>"
+    "<a href=\"NetworkExamples_0.ipynb\"><img src=\"img/open-notebook.png\" align=\"left\"/></a>"
    ]
   }
  ],
