Making progress on NetworkExamples

--- a/IntroPyTorch.ipynb
+++ b/IntroPyTorch.ipynb
@@ -605,7 +605,7 @@
    "source": [
     "## Next Lesson\n",
     "\n",
-    "**Tasks with Networks**: We just looked at building a few simple networks, in several styles, using PyTorch.  The new lesson delves into more complex and real world examples.\n",
+    "**Tasks with Networks**: We just looked at building a few simple networks, in several styles, using PyTorch.  The next lessons delves into more complex and real world examples.\n",
     "\n",
     "<a href=\"NetworkExamples_0.ipynb\"><img src=\"img/open-notebook.png\" align=\"left\"/></a>"
    ]
