--- a/NetworkExamples_0.ipynb
+++ b/NetworkExamples_0.ipynb
@@ -29,7 +29,6 @@
     "\n",
     "<font size=\"+1\">Clustering with NNs</font>\n",
     "<a href=\"NetworkExamples_3.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>\n",
-    "(cf. https://github.com/MarcTLaw/DeepSpectralClusteringToy)\n",
     "\n",
     "<font size=\"+1\">Generative Adversarial Networks (GAN)</font> \n",
     "<a href=\"NetworkExamples_4.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>\n",
@@ -53,12 +52,12 @@
     "\n",
     "# For demonstration, we can use CPU target if CUDA not available\n",
     "device = torch.device('cpu')\n",
-    "# Uncomment this to run on GPU\n",
-    "device = torch.device('cuda') \n",
     "\n",
     "# Check the status of the GPU (if present)\n",
     "if torch.cuda.is_available():\n",
-    "    torch.cuda.memory_allocated()"
+    "    torch.cuda.memory_allocated()\n",
+    "    # *MUCH* faster to run on GPU\n",
+    "    device = torch.device('cuda') "
    ]
   },
   {
@@ -634,7 +633,9 @@
    "source": [
     "## Next Lesson\n",
     "\n",
-    "**Intermediate Machine Learning with PyTorch**: This last lesson of the Beginning material covered several real world neural networks.  For a deeper dive into some specialize areas, come back for a future webinar session on Intermidiate material."
+    "**Tasks with Networks**: This example was a relatively common one of making categorical predictions from independent features.  For this type of network generally uses primarily or exclusively linear layers.  Next we will take a look at an image classifer that will need some layers to associate nearby pixels.\n",
+    "\n",
+    "<a href=\"NetworkExamples_1.ipynb\"><img src=\"img/open-notebook.png\" align=\"left\"/></a>"
    ]
   }
  ],
