--- a/IntroPyTorch.ipynb
+++ b/IntroPyTorch.ipynb
@@ -50,14 +50,14 @@
      "output_type": "stream",
      "text": [
       "Random 2-D tensor\n",
-      "tensor([[-0.4707, -0.4236, -0.5479],\n",
-      "        [-3.6637,  0.5018, -0.1823],\n",
-      "        [ 0.6070,  0.0979, -0.5561]], requires_grad=True)\n",
+      "tensor([[-0.5355, -0.0948, -0.8758],\n",
+      "        [-0.2434,  1.0340, -0.3144],\n",
+      "        [ 0.0559,  0.5671, -1.2290]], requires_grad=True)\n",
       "\n",
       "Random 2-D shifted by 7, multiplied by 5\n",
-      "tensor([[32.6463, 32.8821, 32.2606],\n",
-      "        [16.6814, 37.5089, 34.0883],\n",
-      "        [38.0351, 35.4895, 32.2197]], grad_fn=<MulBackward0>)\n"
+      "tensor([[32.3226, 34.5259, 30.6210],\n",
+      "        [33.7829, 40.1701, 33.4281],\n",
+      "        [35.2796, 37.8356, 28.8551]], grad_fn=<MulBackward0>)\n"
      ]
     }
    ],
@@ -111,12 +111,12 @@
      "output_type": "stream",
      "text": [
       "Multiplied by 3\n",
-      "tensor([[ 97.9388,  98.6462,  96.7817],\n",
-      "        [ 50.0443, 112.5267, 102.2650],\n",
-      "        [114.1052, 106.4686,  96.6592]], grad_fn=<MulBackward0>)\n",
+      "tensor([[ 96.9679, 103.5777,  91.8630],\n",
+      "        [101.3487, 120.5104, 100.2843],\n",
+      "        [105.8388, 113.5067,  86.5653]], grad_fn=<MulBackward0>)\n",
       "\n",
       "Mean of values\n",
-      "tensor(97.2706, grad_fn=<MeanBackward1>)\n"
+      "tensor(102.2736, grad_fn=<MeanBackward1>)\n"
      ]
     }
    ],
@@ -140,11 +140,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  --> <MeanBackward1 object at 0x7f27b6399ba8>\n",
-      "   --> <MulBackward0 object at 0x7f27b6399c18>\n",
-      "    --> <MulBackward0 object at 0x7f27b6399c50>\n",
-      "     --> <AddBackward0 object at 0x7f27b6399c88>\n",
-      "      --> <AccumulateGrad object at 0x7f27b6399cc0>\n"
+      "  --> <MeanBackward1 object at 0x7fed26758e80>\n",
+      "   --> <MulBackward0 object at 0x7fed26758f60>\n",
+      "    --> <MulBackward0 object at 0x7fed26758f98>\n",
+      "     --> <AddBackward0 object at 0x7fed26758fd0>\n",
+      "      --> <AccumulateGrad object at 0x7fed266fb048>\n"
      ]
     }
    ],
@@ -206,17 +206,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration:    0 - Loss: 3.08e+07\n",
-      "Iteration:   50 - Loss: 1.36e+04\n",
-      "Iteration:  100 - Loss: 7.66e+02\n",
-      "Iteration:  150 - Loss: 7.86e+01\n",
-      "Iteration:  200 - Loss: 1.01e+01\n",
-      "Iteration:  250 - Loss: 1.45e+00\n",
-      "Iteration:  300 - Loss: 2.16e-01\n",
-      "Iteration:  350 - Loss: 3.31e-02\n",
-      "Iteration:  400 - Loss: 5.44e-03\n",
-      "Iteration:  450 - Loss: 1.12e-03\n",
-      "Iteration:  500 - Loss: 3.34e-04\n"
+      "Iteration:    0 - Loss: 2.35e+07\n",
+      "Iteration:   50 - Loss: 1.48e+04\n",
+      "Iteration:  100 - Loss: 5.31e+02\n",
+      "Iteration:  150 - Loss: 2.99e+01\n",
+      "Iteration:  200 - Loss: 2.06e+00\n",
+      "Iteration:  250 - Loss: 1.62e-01\n",
+      "Iteration:  300 - Loss: 1.45e-02\n",
+      "Iteration:  350 - Loss: 1.68e-03\n",
+      "Iteration:  400 - Loss: 3.51e-04\n",
+      "Iteration:  450 - Loss: 1.21e-04\n",
+      "Iteration:  500 - Loss: 5.68e-05\n"
      ]
     }
    ],
@@ -270,17 +270,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration:    0 - Loss: 3.294e+07\n",
-      "Iteration:   50 - Loss: 1.371e+04\n",
-      "Iteration:  100 - Loss: 5.185e+02\n",
-      "Iteration:  150 - Loss: 3.469e+01\n",
-      "Iteration:  200 - Loss: 2.842e+00\n",
-      "Iteration:  250 - Loss: 2.521e-01\n",
-      "Iteration:  300 - Loss: 2.323e-02\n",
-      "Iteration:  350 - Loss: 2.421e-03\n",
-      "Iteration:  400 - Loss: 4.108e-04\n",
-      "Iteration:  450 - Loss: 1.259e-04\n",
-      "Iteration:  500 - Loss: 5.713e-05\n"
+      "Iteration:    0 - Loss: 3.628e+07\n",
+      "Iteration:   50 - Loss: 1.221e+04\n",
+      "Iteration:  100 - Loss: 3.330e+02\n",
+      "Iteration:  150 - Loss: 1.390e+01\n",
+      "Iteration:  200 - Loss: 6.835e-01\n",
+      "Iteration:  250 - Loss: 3.631e-02\n",
+      "Iteration:  300 - Loss: 2.232e-03\n",
+      "Iteration:  350 - Loss: 2.831e-04\n",
+      "Iteration:  400 - Loss: 7.717e-05\n",
+      "Iteration:  450 - Loss: 3.352e-05\n",
+      "Iteration:  500 - Loss: 1.930e-05\n"
      ]
     }
    ],
@@ -343,17 +343,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration:    0 - Loss: 6.462e+02\n",
-      "Iteration:   50 - Loss: 2.993e+01\n",
-      "Iteration:  100 - Loss: 1.697e+00\n",
-      "Iteration:  150 - Loss: 2.030e-01\n",
-      "Iteration:  200 - Loss: 3.377e-02\n",
-      "Iteration:  250 - Loss: 6.378e-03\n",
-      "Iteration:  300 - Loss: 1.285e-03\n",
-      "Iteration:  350 - Loss: 2.669e-04\n",
-      "Iteration:  400 - Loss: 5.642e-05\n",
-      "Iteration:  450 - Loss: 1.207e-05\n",
-      "Iteration:  500 - Loss: 2.605e-06\n"
+      "Iteration:    0 - Loss: 7.036e+02\n",
+      "Iteration:   50 - Loss: 2.970e+01\n",
+      "Iteration:  100 - Loss: 1.893e+00\n",
+      "Iteration:  150 - Loss: 1.725e-01\n",
+      "Iteration:  200 - Loss: 1.840e-02\n",
+      "Iteration:  250 - Loss: 2.171e-03\n",
+      "Iteration:  300 - Loss: 2.749e-04\n",
+      "Iteration:  350 - Loss: 3.669e-05\n",
+      "Iteration:  400 - Loss: 5.107e-06\n",
+      "Iteration:  450 - Loss: 7.374e-07\n",
+      "Iteration:  500 - Loss: 1.103e-07\n",
+      "CPU times: user 1.88 s, sys: 0 ns, total: 1.88 s\n",
+      "Wall time: 271 ms\n"
      ]
     }
    ],
@@ -438,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -467,12 +469,13 @@
    "source": [
     "from torchsummary import summary\n",
     "\n",
-    "# torchsummary has a glitch. If a running on a CUDA-enabled build\n",
-    "# it only wants to print a CUDA model\n",
-    "summary(model, input_size=(1, D_in))\n",
-    "\n",
-    "# Use this if first doesn't work\n",
-    "# summary(model.to(torch.device('cuda:0')), input_size=(1, D_in))"
+    "if not torch.cuda.is_available():\n",
+    "    # torchsummary has a glitch. If a running on a CUDA-enabled build\n",
+    "    # it only wants to print a CUDA model\n",
+    "    summary(model, input_size=(1, D_in))\n",
+    "else:\n",
+    "    # Use this if first doesn't work\n",
+    "    summary(model.to(torch.device('cuda')), input_size=(1, D_in))"
    ]
   },
   {
@@ -495,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -545,16 +548,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss after training: 7.895790986367501e-06\n",
-      "CPU times: user 372 ms, sys: 103 ms, total: 476 ms\n",
-      "Wall time: 513 ms\n"
+      "cpu\n",
+      "Loss after training: 2.619826318550622e-06\n",
+      "CPU times: user 1.7 s, sys: 11.3 ms, total: 1.71 s\n",
+      "Wall time: 249 ms\n"
      ]
     }
    ],
