--- a/NetworkExamples_0.ipynb
+++ b/NetworkExamples_0.ipynb
@@ -27,7 +27,7 @@
     "<font size=\"+1\">A regression prediction</font>\n",
     "<a href=\"NetworkExamples_2.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>\n",
     "\n",
-    "<font size=\"+1\">Clustering with NNs</font>\n",
+    "<font size=\"+1\">Clustering with PyTorch</font>\n",
     "<a href=\"NetworkExamples_3.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>\n",
     "\n",
     "<font size=\"+1\">Generative Adversarial Networks (GAN)</font> \n",
