--- a/NetworkExamples_1.ipynb
+++ b/NetworkExamples_1.ipynb
@@ -27,7 +27,7 @@
     "<font size=\"+1\">A regression prediction</font>\n",
     "<a href=\"NetworkExamples_2.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>\n",
     "\n",
-    "<font size=\"+1\">Clustering with NNs</font>\n",
+    "<font size=\"+1\">Clustering with PyTorch</font>\n",
     "<a href=\"NetworkExamples_3.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>\n",
     "\n",
     "<font size=\"+1\">Generative Adversarial Networks (GAN)</font> \n",
@@ -503,6 +503,17 @@
     "\n",
     "print('Accuracy of the network on the 10000 test images: %d %%' % (\n",
     "    100 * correct / total))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Next Lesson\n",
+    "\n",
+    "**Tasks with Networks**: We constructed a fairly good image classifier with just a bit of code.  Clearly, this classifier is less powerful than competition-winning leading ones with hundreds of layers; but just a few layers makes reasonably good predictions.  Next we will reframe the domain area classification problem we looked at in the last lesson as a regression problem.\n",
+    "\n",
+    "<a href=\"NetworkExamples_2.ipynb\"><img src=\"img/open-notebook.png\" align=\"left\"/></a>"
    ]
   }
  ],
