--- a/NetworkExamples_4.ipynb
+++ b/NetworkExamples_4.ipynb
@@ -27,10 +27,10 @@
     "<font size=\"+1\">A regression prediction</font>\n",
     "<a href=\"NetworkExamples_2.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>\n",
     "\n",
-    "<font size=\"+1\"><u><b>Clustering with NNs</b></u></font>\n",
+    "<font size=\"+1\">Clustering with PyTorch</font>\n",
     "<a href=\"NetworkExamples_3.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>\n",
     "\n",
-    "<font size=\"+1\">Generative Adversarial Networks (GAN)</font> \n",
+    "<font size=\"+1\"><u><b>Generative Adversarial Networks (GAN)</b></u></font> \n",
     "<a href=\"NetworkExamples_4.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>\n",
     "\n",
     "<font size=\"+1\">Reinforcement Learning</font>\n",
@@ -41,7 +41,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(cf. https://github.com/MarcTLaw/DeepSpectralClusteringToy)\n"
+    "## Generative Adversarial Networks\n",
+    "\n",
+    "TODO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Next Lesson\n",
+    "\n",
+    "**Tasks with Networks**: This lesson examined Generative Adversarial Networks. The next lesson looks at Reinforcement Learning.\n",
+    "\n",
+    "<a href=\"NetworkExamples_5.ipynb\"><img src=\"img/open-notebook.png\" align=\"left\"/></a>"
    ]
   }
  ],
