--- a/NetworkExamples_5.ipynb
+++ b/NetworkExamples_5.ipynb
@@ -27,13 +27,13 @@
     "<font size=\"+1\">A regression prediction</font>\n",
     "<a href=\"NetworkExamples_2.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>\n",
     "\n",
-    "<font size=\"+1\"><u><b>Clustering with NNs</b></u></font>\n",
+    "<font size=\"+1\">Clustering with PyTorch</font>\n",
     "<a href=\"NetworkExamples_3.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>\n",
     "\n",
     "<font size=\"+1\">Generative Adversarial Networks (GAN)</font> \n",
     "<a href=\"NetworkExamples_4.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>\n",
     "\n",
-    "<font size=\"+1\">Reinforcement Learning</font>\n",
+    "<font size=\"+1\"><u><b>Reinforcement Learning</b></u></font>\n",
     "<a href=\"NetworkExamples_5.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>"
    ]
   },
@@ -41,7 +41,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(cf. https://github.com/MarcTLaw/DeepSpectralClusteringToy)\n"
+    "## Reinforcement Learning\n",
+    "\n",
+    "TODO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Next Lesson\n",
+    "\n",
+    "**Natural Language Processing**: This lesson looked at Reinforcement Learning.  In the next section we turn to the AllenNLP extension to PyTorch.\n",
+    "\n",
+    "<a href=\"AllenNLP.ipynb\"><img src=\"img/open-notebook.png\" align=\"left\"/></a>"
    ]
   }
  ],
