--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -100,11 +100,10 @@
    "source": [
     "## Tasks with Networks\n",
     "\n",
+    "* A simple feature classifier\n",
     "* An image classifier\n",
     "* A regression prediction\n",
-    "* Clustering with NNs (note: https://github.com/MarcTLaw/DeepSpectralClusteringToy)\n",
-    "* Generative Adversarial Networks (GAN)\n",
-    "* Reinforcement Learning\n",
+    "* Clustering with PyTorch\n",
     "\n",
     "<div><a href=\"NetworkExamples_0.ipynb\"><img src=\"img/open-notebook.png\" align=\"left\"/></a></div>"
    ]
@@ -114,6 +113,18 @@
    "metadata": {},
    "source": [
     "# Intermediate Material"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tasks with Networks (cont)\n",
+    "\n",
+    "* Generative Adversarial Networks (GAN)\n",
+    "* Reinforcement Learning\n",
+    "\n",
+    "<div><a href=\"NetworkExamples_4.ipynb\"><img src=\"img/open-notebook.png\" align=\"left\"/></a></div>"
    ]
   },
   {
