--- a/NetworkExamples_0.ipynb
+++ b/NetworkExamples_0.ipynb
@@ -66,7 +66,7 @@
    "source": [
     "## A simple feature classifer\n",
     "\n",
-    "The next section is a slightly simplified version of a problem I worked on in my day job at [BoldMetrics Inc.](https://www.boldmetrics.com/).  The company I work for, as Chief Technology Officer, sells services to big and small clothing retailers to help guide their customers toward the best garment size for each customers.\n",
+    "The next section is a slightly simplified version of a problem I worked on in my day job at [BoldMetrics Inc.](https://www.boldmetrics.com/).  The company I work for, as Chief Technology Officer, sells services to big and small clothing retailers to help guide their customers toward the best garment size for each customer.\n",
     "\n",
     "We make these recommendations based on a survey of a few measurements that consumers tend to know about themselves.  The set of measurements are slightly different for men's versus women's sizes. Moreover, different retailers size their garments—and sometimes different garment categories or lines—differently from other retailers.  This is a case where some machine learning might illuminate the patterns of the relationship between body sizes and clothing sizes."
    ]
